--- a/package/crds/cassandra.cql.crossplane.io_grants.yaml
+++ b/package/crds/cassandra.cql.crossplane.io_grants.yaml
@@ -4,18 +4,18 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
-  name: databases.cassandra.sql.crossplane.io
+  name: grants.cassandra.cql.crossplane.io
 spec:
-  group: cassandra.sql.crossplane.io
+  group: cassandra.cql.crossplane.io
   names:
     categories:
     - crossplane
     - managed
     - sql
-    kind: Database
-    listKind: DatabaseList
-    plural: databases
-    singular: database
+    kind: Grant
+    listKind: GrantList
+    plural: grants
+    singular: grant
   scope: Cluster
   versions:
   - additionalPrinterColumns:
@@ -28,10 +28,22 @@ spec:
     - jsonPath: .metadata.creationTimestamp
       name: AGE
       type: date
+    - jsonPath: .spec.forProvider.role
+      name: ROLE
+      type: string
+    - jsonPath: .spec.forProvider.memberOf
+      name: MEMBER OF
+      type: string
+    - jsonPath: .spec.forProvider.database
+      name: DATABASE
+      type: string
+    - jsonPath: .spec.forProvider.privileges
+      name: PRIVILEGES
+      type: string
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A Database represents the declarative state of a PostgreSQL database.
+        description: A Grant represents the declarative state of a PostgreSQL grant.
         properties:
           apiVersion:
             description: |-
@@ -51,7 +63,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: A DatabaseSpec defines the desired state of a Database.
+            description: A GrantSpec defines the desired state of a Grant.
             properties:
               deletionPolicy:
                 default: Delete
@@ -68,66 +80,265 @@ spec:
                 - Delete
                 type: string
               forProvider:
-                description: DatabaseParameters are the configurable fields of a Database.
+                description: GrantParameters define the desired state of a PostgreSQL
+                  grant instance.
                 properties:
-                  allowConnections:
-                    description: |-
-                      If false then no one can connect to this database. The default is true,
-                      allowing connections (except as restricted by other mechanisms, such as
-                      GRANT/REVOKE CONNECT).
-                    type: boolean
-                  connectionLimit:
-                    description: |-
-                      How many concurrent connections can be made to this database. -1 (the
-                      default) means no limit.
-                    type: integer
-                  encoding:
-                    description: |-
-                      Character set encoding to use in the new database. Specify a string
-                      constant (e.g., 'SQL_ASCII'), or an integer encoding number, or DEFAULT
-                      to use the default encoding (namely, the encoding of the template
-                      database). The character sets supported by the PostgreSQL server are
-                      described in Section 23.3.1. See below for additional restrictions.
+                  database:
+                    description: Database this grant is for.
                     type: string
-                  isTemplate:
-                    description: |-
-                      If true, then this database can be cloned by any user with CREATEDB
-                      privileges; if false (the default), then only superusers or the owner of
-                      the database can clone it.
-                    type: boolean
-                  lcCType:
-                    description: |-
-                      Character classification (LC_CTYPE) to use in the new database. This
-                      affects the categorization of characters, e.g. lower, upper and digit.
-                      The default is to use the character classification of the template
-                      database. See below for additional restrictions.
+                  databaseRef:
+                    description: DatabaseRef references the database object this grant
+                      it for.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                      policy:
+                        description: Policies for referencing.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: |-
+                              Resolution specifies whether resolution of this reference is required.
+                              The default is 'Required', which means the reconcile will fail if the
+                              reference cannot be resolved. 'Optional' means this reference will be
+                              a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: |-
+                              Resolve specifies when this reference should be resolved. The default
+                              is 'IfNotPresent', which will attempt to resolve the reference only when
+                              the corresponding field is not present. Use 'Always' to resolve the
+                              reference on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    required:
+                    - name
+                    type: object
+                  databaseSelector:
+                    description: DatabaseSelector selects a reference to a Database
+                      this grant is for.
+                    properties:
+                      matchControllerRef:
+                        description: |-
+                          MatchControllerRef ensures an object with the same controller reference
+                          as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                      policy:
+                        description: Policies for selection.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: |-
+                              Resolution specifies whether resolution of this reference is required.
+                              The default is 'Required', which means the reconcile will fail if the
+                              reference cannot be resolved. 'Optional' means this reference will be
+                              a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: |-
+                              Resolve specifies when this reference should be resolved. The default
+                              is 'IfNotPresent', which will attempt to resolve the reference only when
+                              the corresponding field is not present. Use 'Always' to resolve the
+                              reference on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    type: object
+                  memberOf:
+                    description: MemberOf is the Role that this grant makes Role a
+                      member of.
                     type: string
-                  lcCollate:
+                  memberOfRef:
+                    description: MemberOfRef references the Role that this grant makes
+                      Role a member of.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                      policy:
+                        description: Policies for referencing.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: |-
+                              Resolution specifies whether resolution of this reference is required.
+                              The default is 'Required', which means the reconcile will fail if the
+                              reference cannot be resolved. 'Optional' means this reference will be
+                              a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: |-
+                              Resolve specifies when this reference should be resolved. The default
+                              is 'IfNotPresent', which will attempt to resolve the reference only when
+                              the corresponding field is not present. Use 'Always' to resolve the
+                              reference on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    required:
+                    - name
+                    type: object
+                  memberOfSelector:
+                    description: MemberOfSelector selects a reference to a Role that
+                      this grant makes Role a member of.
+                    properties:
+                      matchControllerRef:
+                        description: |-
+                          MatchControllerRef ensures an object with the same controller reference
+                          as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                      policy:
+                        description: Policies for selection.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: |-
+                              Resolution specifies whether resolution of this reference is required.
+                              The default is 'Required', which means the reconcile will fail if the
+                              reference cannot be resolved. 'Optional' means this reference will be
+                              a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: |-
+                              Resolve specifies when this reference should be resolved. The default
+                              is 'IfNotPresent', which will attempt to resolve the reference only when
+                              the corresponding field is not present. Use 'Always' to resolve the
+                              reference on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    type: object
+                  privileges:
                     description: |-
-                      Collation order (LC_COLLATE) to use in the new database. This affects the
-                      sort order applied to strings, e.g. in queries with ORDER BY, as well as
-                      the order used in indexes on text columns. The default is to use the
-                      collation order of the template database. See below for additional
-                      restrictions.
+                      Privileges to be granted.
+                      See https://www.postgresql.org/docs/current/sql-grant.html for available privileges.
+                    items:
+                      description: GrantPrivilege represents a privilege to be granted
+                      pattern: ^[A-Z]+$
+                      type: string
+                    minItems: 1
+                    type: array
+                  role:
+                    description: Role this grant is for.
                     type: string
-                  owner:
+                  roleRef:
+                    description: RoleRef references the role object this grant is
+                      for.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                      policy:
+                        description: Policies for referencing.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: |-
+                              Resolution specifies whether resolution of this reference is required.
+                              The default is 'Required', which means the reconcile will fail if the
+                              reference cannot be resolved. 'Optional' means this reference will be
+                              a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: |-
+                              Resolve specifies when this reference should be resolved. The default
+                              is 'IfNotPresent', which will attempt to resolve the reference only when
+                              the corresponding field is not present. Use 'Always' to resolve the
+                              reference on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    required:
+                    - name
+                    type: object
+                  roleSelector:
+                    description: RoleSelector selects a reference to a Role this grant
+                      is for.
+                    properties:
+                      matchControllerRef:
+                        description: |-
+                          MatchControllerRef ensures an object with the same controller reference
+                          as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                      policy:
+                        description: Policies for selection.
+                        properties:
+                          resolution:
+                            default: Required
+                            description: |-
+                              Resolution specifies whether resolution of this reference is required.
+                              The default is 'Required', which means the reconcile will fail if the
+                              reference cannot be resolved. 'Optional' means this reference will be
+                              a no-op if it cannot be resolved.
+                            enum:
+                            - Required
+                            - Optional
+                            type: string
+                          resolve:
+                            description: |-
+                              Resolve specifies when this reference should be resolved. The default
+                              is 'IfNotPresent', which will attempt to resolve the reference only when
+                              the corresponding field is not present. Use 'Always' to resolve the
+                              reference on every reconcile.
+                            enum:
+                            - Always
+                            - IfNotPresent
+                            type: string
+                        type: object
+                    type: object
+                  withOption:
                     description: |-
-                      The role name of the user who will own the new database, or DEFAULT to
-                      use the default (namely, the user executing the command). To create a
-                      database owned by another role, you must be a direct or indirect member
-                      of that role, or be a superuser.
-                    type: string
-                  tablespace:
-                    description: |-
-                      The name of the tablespace that will be associated with the new database,
-                      or DEFAULT to use the template database's tablespace. This tablespace
-                      will be the default tablespace used for objects created in this database.
-                      See CREATE TABLESPACE for more information.
-                    type: string
-                  template:
-                    description: |-
-                      The name of the template from which to create the new database, or
-                      DEFAULT to use the default template (template1).
+                      WithOption allows an option to be set on the grant.
+                      See https://www.postgresql.org/docs/current/sql-grant.html for available
+                      options for each grant type, and the effects of applying the option.
+                    enum:
+                    - ADMIN
+                    - GRANT
                     type: string
                 type: object
               managementPolicies:
@@ -298,7 +509,7 @@ spec:
             - forProvider
             type: object
           status:
-            description: A DatabaseStatus represents the observed state of a Database.
+            description: A GrantStatus represents the observed state of a Grant.
             properties:
               conditions:
                 description: Conditions of the resource.
