--- a/package/crds/cassandra.cql.crossplane.io_providerconfigs.yaml
+++ b/package/crds/cassandra.cql.crossplane.io_providerconfigs.yaml
@@ -4,9 +4,9 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
-  name: providerconfigs.cassandra.sql.crossplane.io
+  name: providerconfigs.cassandra.cql.crossplane.io
 spec:
-  group: cassandra.sql.crossplane.io
+  group: cassandra.cql.crossplane.io
   names:
     categories:
     - crossplane
