--- a/package/crds/cassandra.cql.crossplane.io_roles.yaml
+++ b/package/crds/cassandra.cql.crossplane.io_roles.yaml
@@ -4,9 +4,9 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
-  name: roles.cassandra.sql.crossplane.io
+  name: roles.cassandra.cql.crossplane.io
 spec:
-  group: cassandra.sql.crossplane.io
+  group: cassandra.cql.crossplane.io
   names:
     categories:
     - crossplane
