--- a/package/crds/cassandra.cql.crossplane.io_grants.yaml
+++ b/package/crds/cassandra.cql.crossplane.io_grants.yaml
@@ -31,11 +31,8 @@ spec:
     - jsonPath: .spec.forProvider.role
       name: ROLE
       type: string
-    - jsonPath: .spec.forProvider.memberOf
-      name: MEMBER OF
-      type: string
-    - jsonPath: .spec.forProvider.database
-      name: DATABASE
+    - jsonPath: .spec.forProvider.keyspace
+      name: KEYSAPCE
       type: string
     - jsonPath: .spec.forProvider.privileges
       name: PRIVILEGES
@@ -83,11 +80,11 @@ spec:
                 description: GrantParameters define the desired state of a PostgreSQL
                   grant instance.
                 properties:
-                  database:
-                    description: Database this grant is for.
+                  keyspace:
+                    description: Keyspace this grant is for.
                     type: string
-                  databaseRef:
-                    description: DatabaseRef references the database object this grant
+                  keyspaceRef:
+                    description: KeyspaceRef references the keyspace object this grant
                       it for.
                     properties:
                       name:
@@ -121,8 +118,8 @@ spec:
                     required:
                     - name
                     type: object
-                  databaseSelector:
-                    description: DatabaseSelector selects a reference to a Database
+                  keyspaceSelector:
+                    description: KeyspaceSelector selects a reference to a Keyspace
                       this grant is for.
                     properties:
                       matchControllerRef:
@@ -162,93 +159,20 @@ spec:
                             type: string
                         type: object
                     type: object
-                  memberOf:
-                    description: MemberOf is the Role that this grant makes Role a
-                      member of.
-                    type: string
-                  memberOfRef:
-                    description: MemberOfRef references the Role that this grant makes
-                      Role a member of.
-                    properties:
-                      name:
-                        description: Name of the referenced object.
-                        type: string
-                      policy:
-                        description: Policies for referencing.
-                        properties:
-                          resolution:
-                            default: Required
-                            description: |-
-                              Resolution specifies whether resolution of this reference is required.
-                              The default is 'Required', which means the reconcile will fail if the
-                              reference cannot be resolved. 'Optional' means this reference will be
-                              a no-op if it cannot be resolved.
-                            enum:
-                            - Required
-                            - Optional
-                            type: string
-                          resolve:
-                            description: |-
-                              Resolve specifies when this reference should be resolved. The default
-                              is 'IfNotPresent', which will attempt to resolve the reference only when
-                              the corresponding field is not present. Use 'Always' to resolve the
-                              reference on every reconcile.
-                            enum:
-                            - Always
-                            - IfNotPresent
-                            type: string
-                        type: object
-                    required:
-                    - name
-                    type: object
-                  memberOfSelector:
-                    description: MemberOfSelector selects a reference to a Role that
-                      this grant makes Role a member of.
-                    properties:
-                      matchControllerRef:
-                        description: |-
-                          MatchControllerRef ensures an object with the same controller reference
-                          as the selecting object is selected.
-                        type: boolean
-                      matchLabels:
-                        additionalProperties:
-                          type: string
-                        description: MatchLabels ensures an object with matching labels
-                          is selected.
-                        type: object
-                      policy:
-                        description: Policies for selection.
-                        properties:
-                          resolution:
-                            default: Required
-                            description: |-
-                              Resolution specifies whether resolution of this reference is required.
-                              The default is 'Required', which means the reconcile will fail if the
-                              reference cannot be resolved. 'Optional' means this reference will be
-                              a no-op if it cannot be resolved.
-                            enum:
-                            - Required
-                            - Optional
-                            type: string
-                          resolve:
-                            description: |-
-                              Resolve specifies when this reference should be resolved. The default
-                              is 'IfNotPresent', which will attempt to resolve the reference only when
-                              the corresponding field is not present. Use 'Always' to resolve the
-                              reference on every reconcile.
-                            enum:
-                            - Always
-                            - IfNotPresent
-                            type: string
-                        type: object
-                    type: object
                   privileges:
-                    description: |-
-                      Privileges to be granted.
-                      See https://www.postgresql.org/docs/current/sql-grant.html for available privileges.
+                    description: Privileges to be granted.
                     items:
                       description: GrantPrivilege represents a privilege to be granted
-                      pattern: ^[A-Z]+$
+                      enum:
+                      - ALL_PERMISSIONS
+                      - ALTER
+                      - AUTHORIZE
+                      - CREATE
+                      - DESCRIBE
+                      - DROP
+                      - EXECUTE
+                      - MODIFY
+                      - SELECT
                       type: string
                     minItems: 1
                     type: array
@@ -331,15 +255,8 @@ spec:
                             type: string
                         type: object
                     type: object
-                  withOption:
-                    description: |-
-                      WithOption allows an option to be set on the grant.
-                      See https://www.postgresql.org/docs/current/sql-grant.html for available
-                      options for each grant type, and the effects of applying the option.
-                    enum:
-                    - ADMIN
-                    - GRANT
-                    type: string
+                required:
+                - privileges
                 type: object
               managementPolicies:
                 default:
